change few thing